many cosmetic changes to the site (alignment of plan and image, scroll text boxes for large captions, reduced banner and home page). the biggest visible change is that if more than one view was photographed of a given subject, a single green dot representing the subject will be placed where the subject is on the plan.  to accommodate multiple views, i have set up arrows under the photograph to click through the different views.  you can see an example of this as soon as you enter the site, where there are 19 photographs of the stupa of cave 10.  caves 4 and 5 have examples of proper placement of the green dots; markers for cave 10 need to be repositioned (and reduced in number, so that there is a single dot for the stupa). this will reduce clutter of the site, save an enormous amount of time inputting the data and correcting mistakes on-site, and will reduce the number of errors.

--- a/shared/style.css
+++ b/shared/style.css
@@ -17,7 +17,7 @@ body {
 .banner {
   position: absolute;
   left: 20px;
-  top: 20px;
+  top: 17px;
   color: #eae2c4; #9C957C;
 }
 
@@ -52,14 +52,14 @@ body {
   position: absolute;
   left: 180px;
   width: 700px;
-  top: 220px;
+  top: 200px;
   font-size: 95%;
 }
 
 .search {
   position: absolute;
-  left: 465px;
-  top: 23px;
+  left: 665px;
+  top: 12px;
   font-size: 75%;
 }
 .input_keywords {
@@ -89,15 +89,9 @@ body {
   font-size: 90%;
 }
 
-.plan {
+.planbox {
   position: absolute;
-  top: 270px;
-}
-.plan_title {
-  position: absolute;
-  left: 270px;
-  top: 760px;
-  font-size: 110%;
+  top: 220px;
 }
 .no_plan_title {
   position: absolute;
